# rs-bytebuffer

./: Cargo.toml  README.md
src/: lib.rs
src/byte_buf/: byte_reader.rs  common.rs  error.rs  mod.rs  read_byte_buf.rs
src/test_byte_buf_mod/: mod.rs
